Fixed center align issues and made some design changes

--- a/static/css/certificate.css
+++ b/static/css/certificate.css
@@ -7,12 +7,19 @@ body {
 /* Header/Logo Title */
 .header {
     background: #335983;
+    width: 100%;
     height: 80px;
+    display: flex;
+    align-items: center;
 }
 
 .header img{
-    margin-left: 30px;
-    margin-top: 8px;
+    width: 73px;
+    aspect-ratio: auto 73 / 68;
+    height: 68px;
+    flex-shrink: 0;
+    object-fit: contain;
+    padding: 0px 70px;
 }
 
 /* Page Content */
@@ -36,10 +43,13 @@ body {
     margin-left: 35px;
 }
 
-.page-content img {
-    margin-left: 400px;
-    margin-top: 50px;
+.page-content .certificate-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 
 /* Button */
 .page-content button {
@@ -54,13 +64,9 @@ body {
     font-size: 17px;
     cursor: pointer;
     box-shadow: 0 8px 16px 0 #335983 , 0 6px 20px 0 #335983;
-    margin-left: 550px;
-    margin-top: 30px;
 }
 
 .page-content h5{
-    margin-left: 520px; 
-    margin-top: 40px;
     font-size: 18px;
 }
 
@@ -71,16 +77,11 @@ body {
         height: 60px;
     }
     .header img{
-        margin-top: 2px;
-        margin-left: 25px;
-        width: 73px;
-        height: 65px;
+        padding: 0px 25px;
     }
     .page-content h1{
         font-size: 35px;
-        margin-left: 25px;
-        margin-top: 50px;
-        margin-bottom: 5px;
+        margin: 50px 25px 5px;
     }
 
     .page-content p {
@@ -95,8 +96,6 @@ body {
         margin-left: 28px;
     }
     .page-content img {
-        margin-left: 50px;
-        margin-top: 20px;
         width: 312px;
         height: 215px;
     }
@@ -113,13 +112,9 @@ body {
         font-size: 17px;
         cursor: pointer;
         box-shadow: 0 8px 16px 0 #335983 , 0 6px 20px 0 #335983;
-        margin-left: 100px;
-        margin-top: 20px;
     }
 
     .page-content h5{
-        margin-left: 85px; 
-        margin-top: 30px;
         font-size: 12px;
     }
   
